# anndata-rs

./: .buildinfo  .gitignore  Cargo.toml  README.md  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree
.doctrees/_autosummary/: anndata_rs.AnnData.X.doctree  anndata_rs.AnnData.backend.doctree  anndata_rs.AnnData.chunked_X.doctree  anndata_rs.AnnData.close.doctree  anndata_rs.AnnData.copy.doctree  anndata_rs.AnnData.doctree  anndata_rs.AnnData.filename.doctree  anndata_rs.AnnData.is_closed.doctree  anndata_rs.AnnData.isbacked.doctree  anndata_rs.AnnData.layers.doctree  anndata_rs.AnnData.n_obs.doctree  anndata_rs.AnnData.n_vars.doctree  anndata_rs.AnnData.obs.doctree  anndata_rs.AnnData.obs_ix.doctree  anndata_rs.AnnData.obs_names.doctree  anndata_rs.AnnData.obsm.doctree  anndata_rs.AnnData.obsp.doctree  anndata_rs.AnnData.open.doctree  anndata_rs.AnnData.shape.doctree  anndata_rs.AnnData.subset.doctree  anndata_rs.AnnData.to_memory.doctree  anndata_rs.AnnData.uns.doctree  anndata_rs.AnnData.var.doctree  anndata_rs.AnnData.var_ix.doctree  anndata_rs.AnnData.var_names.doctree  anndata_rs.AnnData.varm.doctree  anndata_rs.AnnData.varp.doctree  anndata_rs.AnnData.write.doctree  anndata_rs.AnnDataSet.X.doctree  anndata_rs.AnnDataSet.adatas.doctree  anndata_rs.AnnDataSet.backend.doctree  anndata_rs.AnnDataSet.chunked_X.doctree  anndata_rs.AnnDataSet.close.doctree  anndata_rs.AnnDataSet.copy.doctree  anndata_rs.AnnDataSet.doctree  anndata_rs.AnnDataSet.is_closed.doctree  anndata_rs.AnnDataSet.isbacked.doctree  anndata_rs.AnnDataSet.n_obs.doctree  (+45 more)
_autosummary/: anndata_rs.AnnData.X.html  anndata_rs.AnnData.backend.html  anndata_rs.AnnData.chunked_X.html  anndata_rs.AnnData.close.html  anndata_rs.AnnData.copy.html  anndata_rs.AnnData.filename.html  anndata_rs.AnnData.html  anndata_rs.AnnData.is_closed.html  anndata_rs.AnnData.isbacked.html  anndata_rs.AnnData.layers.html  anndata_rs.AnnData.n_obs.html  anndata_rs.AnnData.n_vars.html  anndata_rs.AnnData.obs.html  anndata_rs.AnnData.obs_ix.html  anndata_rs.AnnData.obs_names.html  anndata_rs.AnnData.obsm.html  anndata_rs.AnnData.obsp.html  anndata_rs.AnnData.open.html  anndata_rs.AnnData.shape.html  anndata_rs.AnnData.split_obs_by.html  anndata_rs.AnnData.subset.html  anndata_rs.AnnData.to_memory.html  anndata_rs.AnnData.uns.html  anndata_rs.AnnData.var.html  anndata_rs.AnnData.var_ix.html  anndata_rs.AnnData.var_names.html  anndata_rs.AnnData.varm.html  anndata_rs.AnnData.varp.html  anndata_rs.AnnData.write.html  anndata_rs.AnnDataSet.X.html  anndata_rs.AnnDataSet.adatas.html  anndata_rs.AnnDataSet.backend.html  anndata_rs.AnnDataSet.chunked_X.html  anndata_rs.AnnDataSet.close.html  anndata_rs.AnnDataSet.copy.html  anndata_rs.AnnDataSet.html  anndata_rs.AnnDataSet.is_closed.html  anndata_rs.AnnDataSet.isbacked.html  anndata_rs.AnnDataSet.n_obs.html  anndata_rs.AnnDataSet.n_vars.html  (+45 more)
_sources/: api.rst.txt  install.rst.txt
anndata/: Cargo.toml  README.md
anndata-hdf5/: Cargo.toml
anndata-hdf5/src/: lib.rs
anndata-hdf5/tests/: tests.rs
anndata-n5/: Cargo.toml
anndata-n5/src/: lib.rs
anndata-rs/: Cargo.toml
anndata-rs/benches/: main.rs
anndata-rs/src/: anndata.rs  anndata_trait.rs  backend.rs  data.rs  error.rs  io.rs  iterator.rs  lib.rs  traits.rs
anndata-rs/src/anndata/: dataset.rs
anndata-rs/src/anndata_trait/: data.rs  matrix.rs
anndata-rs/src/backend/: hdf5.rs  memory.rs  n5.rs
anndata-rs/src/data/: array.rs  base.rs  data_traits.rs  dataframe.rs  matrix.rs  other.rs  scalar.rs  slice.rs
anndata-rs/src/data/array/: iterators.rs  ndarray.rs  slice.rs  sparse.rs
anndata-rs/src/element/: base.rs  collection.rs  element.rs  mod.rs
anndata-rs/src/utils/: array.rs  error.rs  hdf5.rs  io.rs  macros.rs  mod.rs
anndata-rs/tests/: integration_test.rs
anndata-test-utils/: Cargo.toml
anndata-test-utils/benches/: benchmark.rs
anndata-test-utils/src/: lib.rs
anndata-test-utils/src/common/: mod.rs
anndata-test-utils/tests/: tests.rs
anndata-test-utils/tests/data/: sample.h5ad
anndata-zarr/: Cargo.toml
anndata-zarr/src/: lib.rs
anndata/benches/: main.rs
anndata/src/: anndata.rs  backend.rs  concat.rs  data.rs  io.rs  lib.rs  macros.rs  reader.rs  traits.rs
anndata/src/anndata/: dataset.rs  elem_io.rs
anndata/src/backend/: datatype.rs  hdf5.rs  n5.rs
anndata/src/container/: base.rs  collection.rs  mod.rs
anndata/src/data/: array.rs  data_traits.rs  index.rs  mapping.rs  scalar.rs
anndata/src/data/array/: chunks.rs  dataframe.rs  dense.rs  dynamic.rs  iterators.rs  ndarray.rs  slice.rs  sparse.rs  sparse_csc.rs  utils.rs
anndata/src/data/array/dense/: dynamic.rs
anndata/src/data/array/sparse/: csc.rs  csr.rs  dynamic.rs  mod.rs  noncanonical.rs  utils.rs
anndata/src/element/: base.rs  collection.rs  mod.rs
anndata/src/traits/: iterator.rs
anndata/src/utils/: array.rs  hdf5.rs
anndata/tests/: anndata.rs  anndata_op.rs  anndataset_test.rs  integration_test.rs
anndata/tests/common/: mod.rs
pyanndata/: Cargo.toml
pyanndata/src/: anndata.rs  container.rs  data.rs  element.rs  io.rs  iterator.rs  lib.rs  utils.rs
pyanndata/src/anndata/: anndata.rs  backed.rs  dataset.rs  memory.rs  mod.rs
pyanndata/src/container/: traits.rs
pyanndata/src/data/: array.rs  dataframe.rs  instance.rs  slice.rs
pyanndata/src/utils/: conversion.rs  instance.rs
pyanndata/src/utils/conversion/: dataframe.rs  mod.rs  py_to_rust.rs  rust_to_py.rs
python/: Cargo.toml  pyproject.toml  setup.py
python/anndata_rs/: __init__.py
python/docs/: api.rst  conf.py  index.rst
python/src/: anndata.rs  dataset.rs  element.rs  iterator.rs  lib.rs  utils.rs
python/src/utils/: conversion.rs  error.rs
python/src/utils/conversion/: py_to_rust.rs  rust_to_py.rs
python/tests/: test_base.py  test_concat.py  test_copy.py  test_index.py  test_io.py  test_subset.py
src/: anndata.rs  anndata_trait.rs  backed.rs  base.rs  element.rs  io.rs  iterator.rs  lib.rs  utils.rs
(+96 files in other folders)
