[package]
name = "anndata-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
indexmap = "1.8.1"
itertools = "0.8"
hdf5 = "0.8.1"
ndarray = "0.15.4"
nalgebra-sparse = "0.6.0"
dyn-clone = "1.0.5"
downcast-rs = "1.2.0"
polars = { version = "0.20.0", features = ["ndarray", "dtype-categorical"] }
paste = "1.0.7"