[package]
name = "anndata-hdf5"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "HDF5 backend for the anndata package"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anndata = "0.3"
anyhow = "1.0"
hdf5 = { version = "0.8" }
hdf5-sys = { version = "0.8", features = ["static", "zlib", "threadsafe"] }
#libz-sys = { version = "1", features = ["zlib-ng"], default-features = false }
libz-sys = { version = "1", features = ["libc"], default-features = false }
ndarray = { version = "0.15" }

[dev-dependencies]
tempfile = "3.2"
rand = "0.8.5"
ndarray-rand = "0.14"