[package]
name = "anndata-hdf5"
version = "0.5.1"
edition = "2021"
rust-version = "1.65"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "HDF5 backend for the anndata package"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anndata = { workspace = true }
anyhow = "1.0"
hdf5 = { package = "hdf5-metno", version = "0.9", features = ["lzf"] }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10", features = ["static", "zlib", "threadsafe"] }
libz-sys = { version = "1", features = ["libc"], default-features = false }
ndarray = { version = "0.16" }

[dev-dependencies]
tempfile = "3.2"
rand = "0.8.5"
ndarray-rand = "0.15"
