[package]
name = "anndata-n5"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "N5 backend for the anndata package"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anndata = { path = '../anndata' }
anyhow = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
n5 = { git = "https://github.com/kaizhang/rust-n5.git", rev = "3e3a3d2e70316921a187698527153b4e25f05166" }
smallvec = "1.10"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.2"
criterion = { version = "0.4", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"] }
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.14"