[package]
name = "anndata-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
homepage = "https://github.com/"

[dependencies]
flate2 = "1.0"
indexmap = { version = "1.8", features = ["rayon"] }
itertools = "0.10"
hdf5 = "0.8"
hdf5-sys = { version = "0.8", features = ["static", "zlib"], optional = true }
libz-sys = { version = "1", features = ["zlib-ng"], default-features = false, optional = true }
ndarray = "0.15"
nalgebra-sparse = "0.7"
dyn-clone = "1.0"
downcast-rs = "1.2"
polars = { version = "0.23", features = ["decompress", "ndarray", "dtype-full"] }
paste = "1.0"
parking_lot = "0.12"
anyhow = "1.0"
rayon = "1.5"

[dev-dependencies]
tempfile = "3.2"
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"

[features]
static = ["dep:hdf5-sys", "dep:libz-sys"]

[[bench]]
name = "main"
harness = false