[package]
name = "anndata-test-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.16" }
anndata = { workspace = true }
num = "0.4"
tempfile = "3.2"
criterion = { version = "0.4", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"] }
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.15"
nalgebra = { version = "0.33", features = ["rand"] }
nalgebra-sparse = "0.10"
itertools = "0.13"

[dev-dependencies]
anndata-hdf5 = { workspace = true }
anndata-zarr = { workspace = true }
tempfile = "3.2"
proptest = "1"
rand = "0.8.5"