[package]
name = "anndata-test-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.16"
anndata = { workspace = true }
num = "0.4"
tempfile = "3.2"
proptest = "1"
rand = "0.9"
ndarray-rand = "0.15"
nalgebra = { version = "0.34", features = ["rand"] }
nalgebra-sparse = "0.11"
itertools = "0.14"

[dev-dependencies]
anndata-hdf5 = { workspace = true }
anndata-zarr = { workspace = true }
tempfile = "3.2"
proptest = "1"
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
lz4_flex = "0.11"
rayon = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false