[package]
name = "anndata"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
indexmap = { version = "2.0", features = ["rayon"] }
itertools = "0.11"
ndarray = { version = "0.15" }
nalgebra-sparse = "0.9"
num = "0.4"
polars = { version = "0.32", features = ["lazy", "decompress-fast", "ndarray", "dtype-full"] }
parking_lot = "0.12"
replace_with = "0.1"
smallvec = "1.11"
rayon = "1.7"
permutation = "0.4"

[dev-dependencies]
anndata-n5 = { path = '../anndata-n5' }
anndata-hdf5 = { path = '../anndata-hdf5' }
tempfile = "3.2"
criterion = { version = "0.4", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"] }
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.14"
nalgebra = { version = "0.32", features = ["rand"] }

[[bench]]
name = "main"
harness = false