[package]
name = "anndata"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
log = "0.4"
indexmap = { version = "2.5", features = ["rayon"] }
itertools = "0.13"
ndarray = { version = "0.16" }
nalgebra-sparse = "0.10"
num = "0.4"
polars = { version = "0.43", features = ["lazy", "decompress-fast", "ndarray", "dtype-full"] }
parking_lot = "0.12"
replace_with = "0.1"
smallvec = "1.13"
rayon = "1.10"
permutation = "0.4"

[dev-dependencies]
tempfile = "3.2"
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.15"
nalgebra = { version = "0.33", features = ["rand"] }