[package]
name = "anndata"
version = "0.6.2"
edition = "2021"
rust-version = "1.81"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
log = "0.4"
indexmap = { version = "2.6", features = ["rayon"] }
itertools = "0.13"
ndarray = "0.16"
nalgebra-sparse = "0.10"
num = "0.4"
polars = { version = "0.46.0", features = ["lazy", "ndarray", "dtype-full"] }
paste = "1.0"
parking_lot = "0.12"
smallvec = "1.13"
serde = "1.0"
serde_json = "1.0"
rayon = "1.10"
permutation = "0.4"

[dev-dependencies]
tempfile = "3.2"
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.15"
nalgebra = { version = "0.33", features = ["rand"] }