[package]
name = "anndata_rs"
version = "0.4.0"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["data"]

[dependencies]
pyanndata = { path = "../pyanndata" }
pyo3-log = "0.10"

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "multiple-pymethods"]

[lib]
name = "anndata_rs"
crate-type = ["cdylib"]
