[package]
name = "anndata_rs"
version = "0.5.0"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["data"]

[dependencies]
pyanndata = { workspace = true }
pyo3-log = "0.11"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "multiple-pymethods"]

[lib]
name = "anndata_rs"
crate-type = ["cdylib"]
