[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "anndata_rs"

[project]
name = "anndata_rs"
authors = [
    {name = "Kai Zhang", email = "zhangkai33@westlake.edu.cn"}
]
maintainers = [
    {name = "Kai Zhang", email = "zhangkai33@westlake.edu.cn"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8, <3.14"
dynamic = ["version"]

dependencies = [
    'anndata >= 0.8.0, < 0.13.0',
    'hdf5plugin >= 5.0.0',
    "numpy>=2, <3",
    "pandas>=2.2, <3",
    "pyarrow",
    "scipy>=1.4",
    "polars>=1.9, <1.32",
]

[project.optional-dependencies]
test = ["pytest", "hypothesis==6.72.4"]